--- a/aboutpaws.html
+++ b/aboutpaws.html
@@ -59,7 +59,14 @@
                     <img src="icons/colab.png" alt="Colab" title="Colab">
             </div>  
             <div class="categ">
-                <p class="des" style="text-align: justify;">AboutPaws is a mobile application that utilizes machine learning through image processing to classify the dog breed of the uploaded image.
+                <p class="des" style="text-align: center;">AboutPaws is a mobile application that utilizes machine learning through image processing to classify the dog breed of the uploaded image.
+                    <br>
+                    <br>
+                    Language Used:
+                    <br>
+                    Dart
+                    <br>
+                    Python
                 </p>   
             </div>      
             <div class="categ">
@@ -89,7 +96,7 @@
             <div class="card">
                 <a href="studyforge.html"><span>STUDYFORGE</span></a>
                 <a href="picleaf.html"><span>PICLEAF</span></a>
-                <a><span>LETSGROW</span></a>
+                <a href="letsgrow.html"><span>LETSGROW</span></a>
                 <a href="aboutpaws.html"><span>ABOUTPAWS</span></a>
                 <a><span>DR. TRASH</span></a>
             </div>
@@ -97,15 +104,15 @@
                 <h2>WEBSITES</h2>
             </div>
             <div class="card">
-                <a><span>WISHLIST</span></a>
-                <a><span>LETSGROW CHARTS</span></a>
-                <a><span>FDL</span></a> 
+                <a href="wishlist.html"><span>WISHLIST</span></a>
+                <a href="lgcharts.html"><span>LETSGROW CHARTS</span></a>
+                <a href="fdl.html"><span>FDL</span></a> 
             </div>
             <div class="categ">
                 <h2>GAMES</h2>
             </div>
             <div class="card">
-                <a><span>HODO'S WORLD <br> ADVENTURE</span></a>
+                <a href="hodo.html"><span>HODO'S WORLD <br> ADVENTURE</span></a>
 
             </div>
         </div>
