--- a/fdl.html
+++ b/fdl.html
@@ -40,11 +40,68 @@
                   <li><a href="projects.html">Projects</a></li>
                   <li><a href="https://drive.google.com/file/d/1m3LCaJJBKu0QXZPLsvTmFQs_siB_aiLQ/view">Get Resume</a></li>
                   <li><a href="https://www.facebook.com/fritzkie.paras">Facebook</a></li>
-                  <li><a href="https://www.linkedin.com/in/fritz-lamparas-418b57219/">LinkedIn</a></li>
-                  <li><a href="https://github.com/fritzlamparas?tab=repositories">Github</a></li>
+                  <li><a href="https://www.linkedin.com/in/fritz-lamparas-418b57219/">LinkedIn</a></li>    
+                  <li><a href="https://github.com/fritzlamparas?tab=repositories">Github</a></li>          
                 </ul>
             </div>
         </div>
+        <div class="lighter flexj">
+            <div class="categ">
+                <img src="icons/hodo.png" alt="StudyForge" title="StudyForge">
+                <div class="txt">
+                    FDL
+                </div>
+            </div>
+            <div class="categ">  
+                    <p class="des">Tools Used: </p>   
+                    <img src="icons/vscode.png" alt="VSCode" title="VSCode">                  
+            </div>  
+            <div class="categ">
+                <p class="des" style="text-align: center;">
+                    FDL is the professional portfolio of Fritz D. Lamparas, a showcase of expertise, experience, and accomplishments. Derived from the initials of my name, FDL is designed to provide potential employers with a comprehensive view of my skills and credentials.
+                    <br>
+                    <br>
+                    Language Used:
+                    <br>
+                    HTML
+                    <br>
+                    CSS
+                    <br>
+                    JavaScript
+                </p>   
+            </div>      
+            <div class="categ">
+                <div class="slideshow-container hodo">
+                    <div class="mySlides fade">
+                        <img src="hodomockup/phone-mockup1.png" style="width:100%;">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="hodomockup/phone-mockup2.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="hodomockup/phone-mockup3.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="hodomockup/phone-mockup4.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="hodomockup/phone-mockup5.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="hodomockup/phone-mockup6.png" style="width:100%">
+                    </div>
+                    <div style="text-align:center">
+                        <span class="dot" onclick="currentSlide(0)"></span>
+                        <span class="dot" onclick="currentSlide(1)"></span>
+                        <span class="dot" onclick="currentSlide(2)"></span>
+                        <span class="dot" onclick="currentSlide(3)"></span>
+                        <span class="dot" onclick="currentSlide(4)"></span>
+                        <span class="dot" onclick="currentSlide(5)"></span>
+                    </div>
+                </div>
+            </div>     
+        </div>
+ 
         <div class="darker flexj">
             <div class="categ">
                 <h2>FLUTTER APPS</h2>
@@ -79,5 +136,7 @@
             <a><strong>Home Address:</strong> 58 San Luis St. Villareal Brgy. Gulod, Novaliches, Quezon City, Philippines, 1117</a>
         </div>
     <script src="scripts.js"></script>
+    <script src="projscripts.js"></script>   
     </body>
+    
 </html>
