--- a/letsgrow.html
+++ b/letsgrow.html
@@ -40,11 +40,60 @@
                   <li><a href="projects.html">Projects</a></li>
                   <li><a href="https://drive.google.com/file/d/1m3LCaJJBKu0QXZPLsvTmFQs_siB_aiLQ/view">Get Resume</a></li>
                   <li><a href="https://www.facebook.com/fritzkie.paras">Facebook</a></li>
-                  <li><a href="https://www.linkedin.com/in/fritz-lamparas-418b57219/">LinkedIn</a></li>
-                  <li><a href="https://github.com/fritzlamparas?tab=repositories">Github</a></li>
+                  <li><a href="https://www.linkedin.com/in/fritz-lamparas-418b57219/">LinkedIn</a></li>    
+                  <li><a href="https://github.com/fritzlamparas?tab=repositories">Github</a></li>          
                 </ul>
             </div>
         </div>
+        <div class="lighter flexj">
+            <div class="categ">
+                <img src="icons/lg.png" alt="StudyForge" title="StudyForge">
+                <div class="txt">
+                    LETSGROW
+                </div>
+            </div>
+            <div class="categ">  
+                    <p class="des">Tools Used: </p>                      
+                    <img src="icons/vscode.png" alt="VSCode" title="VSCode">
+                    <img src="icons/flutter.png" alt="Flutter" title="Flutter">
+                    <img src="icons/firebase.png" alt="Firebase" title="Firebase">
+                    <img src="icons/uno.png" alt="Arduino" title="Arduino">
+                    <img src="icons/colab.png" alt="Colab" title="Colab">
+            </div>  
+            <div class="categ">
+                <p class="des" style="text-align: center;">
+                    LetsGrow is a growth monitoring software that uses image processing to detect the growth rate of lettuces grown in an aquaponic system according to the pictures gathered while it is being monitored. This app can also access the parameters gathered using the placed sensors in the system.
+                    <br>
+                    <br>
+                    Language Used:
+                    <br>
+                    Dart
+                    <br>
+                    Python
+                    <br>
+                    C++
+                </p>   
+            </div>      
+            <div class="categ">
+                <div class="slideshow-container">
+                    <div class="mySlides fade">
+                        <img src="lgmockup/phone-mockup1.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="lgmockup/phone-mockup2.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="lgmockup/phone-mockup3.png" style="width:100%">
+                    </div>
+                    <div style="text-align:center">
+                        <span class="dot" onclick="currentSlide(0)"></span>
+                        <span class="dot" onclick="currentSlide(1)"></span>
+                        <span class="dot" onclick="currentSlide(2)"></span>
+                    </div>
+                </div>
+            </div>     
+        </div>
+ 
         <div class="darker flexj">
             <div class="categ">
                 <h2>FLUTTER APPS</h2>
@@ -62,7 +111,7 @@
             <div class="card">
                 <a href="wishlist.html"><span>WISHLIST</span></a>
                 <a href="lgcharts.html"><span>LETSGROW CHARTS</span></a>
-                <a href="fdl.html"><span>FDL</span></a> 
+                <a href="fdl.html"><span>FDL</span></a>  
             </div>
             <div class="categ">
                 <h2>GAMES</h2>
@@ -79,5 +128,7 @@
             <a><strong>Home Address:</strong> 58 San Luis St. Villareal Brgy. Gulod, Novaliches, Quezon City, Philippines, 1117</a>
         </div>
     <script src="scripts.js"></script>
+    <script src="projscripts.js"></script>   
     </body>
+    
 </html>
