--- a/studyforge.html
+++ b/studyforge.html
@@ -60,7 +60,12 @@
                     <img src="icons/canva.png" alt="Canva" title="Canva">
             </div>  
             <div class="categ">
-                <p class="des" style="text-align: justify;">StudyForge is a mobile app designed to aid computer engineering students in preparing for their exams. The app employs a quiz tool to test users on crucial exam topics, providing a streamlined and effective study experience with its user-friendly interface. StudyForge is an essential companion for students seeking comprehensive review in the field of computer engineering.
+                <p class="des" style="text-align: center;">StudyForge is a mobile app designed to aid computer engineering students in preparing for their exams. The app employs a quiz tool to test users on crucial exam topics, providing a streamlined and effective study experience with its user-friendly interface. StudyForge is an essential companion for students seeking comprehensive review in the field of computer engineering.
+                    <br>
+                    <br>
+                    Language Used:
+                    <br>
+                    Dart
                 </p>
                 
             </div>      
@@ -100,7 +105,7 @@
             <div class="card">
                 <a href="studyforge.html"><span>STUDYFORGE</span></a>
                 <a href="picleaf.html"><span>PICLEAF</span></a>
-                <a><span>LETSGROW</span></a>
+                <a href="letsgrow.html"><span>LETSGROW</span></a>
                 <a href="aboutpaws.html"><span>ABOUTPAWS</span></a>
                 <a><span>DR. TRASH</span></a>
             </div>
@@ -108,15 +113,15 @@
                 <h2>WEBSITES</h2>
             </div>
             <div class="card">
-                <a><span>WISHLIST</span></a>
-                <a><span>LETSGROW CHARTS</span></a>
-                <a><span>FDL</span></a> 
+                <a href="wishlist.html"><span>WISHLIST</span></a>
+                <a href="lgcharts.html"><span>LETSGROW CHARTS</span></a>
+                <a href="fdl.html"><span>FDL</span></a> 
             </div>
             <div class="categ">
                 <h2>GAMES</h2>
             </div>
             <div class="card">
-                <a><span>HODO'S WORLD <br> ADVENTURE</span></a>
+                <a href="hodo.html"><span>HODO'S WORLD <br> ADVENTURE</span></a>
 
             </div>
         </div>
