--- a/picleaf.html
+++ b/picleaf.html
@@ -61,8 +61,15 @@
                     <img src="icons/colab.png" alt="Colab" title="Colab">
             </div>  
             <div class="categ">
-                <p class="des" style="text-align: justify;">
+                <p class="des" style="text-align: center;">
                     PicLeaf is a software that uses image processing to detect the disease that the plant may have according to the abnormalities of its leaves. It mainly focuses on fruit-bearing plants that garden lovers or the plantitos and plantitas in the Philippines tend to plant most often.
+                    <br>
+                    <br>
+                    Language Used:
+                    <br>
+                    Dart
+                    <br>
+                    Python
                 </p>   
             </div>      
             <div class="categ">
@@ -96,7 +103,7 @@
             <div class="card">
                 <a href="studyforge.html"><span>STUDYFORGE</span></a>
                 <a href="picleaf.html"><span>PICLEAF</span></a>
-                <a><span>LETSGROW</span></a>
+                <a href="letsgrow.html"><span>LETSGROW</span></a>
                 <a href="aboutpaws.html"><span>ABOUTPAWS</span></a>
                 <a><span>DR. TRASH</span></a>
             </div>
@@ -104,15 +111,15 @@
                 <h2>WEBSITES</h2>
             </div>
             <div class="card">
-                <a><span>WISHLIST</span></a>
-                <a><span>LETSGROW CHARTS</span></a>
-                <a><span>FDL</span></a> 
+                <a href="wishlist.html"><span>WISHLIST</span></a>
+                <a href="lgcharts.html"><span>LETSGROW CHARTS</span></a>
+                <a href="fdl.html"><span>FDL</span></a> 
             </div>
             <div class="categ">
                 <h2>GAMES</h2>
             </div>
             <div class="card">
-                <a><span>HODO'S WORLD <br> ADVENTURE</span></a>
+                <a href="hodo.html"><span>HODO'S WORLD <br> ADVENTURE</span></a>
 
             </div>
         </div>
