--- a/fdl.html
+++ b/fdl.html
@@ -47,7 +47,6 @@
         </div>
         <div class="lighter flexj">
             <div class="categ">
-                <img src="icons/hodo.png" alt="StudyForge" title="StudyForge">
                 <div class="txt">
                     FDL
                 </div>
@@ -55,7 +54,8 @@
             <div class="categ">  
                     <p class="des">Tools Used: </p>   
                     <img src="icons/vscode.png" alt="VSCode" title="VSCode">     
-                    <img src="icons/figma.png" alt="Figma" title="Figma">                
+                    <img src="icons/figma.png" alt="Figma" title="Figma"> 
+                    <img src="icons/github.png" alt="Github" title="Github">                 
             </div>  
             <div class="categ">
                 <p class="des" style="text-align: center;">
@@ -74,30 +74,22 @@
             <div class="categ">
                 <div class="slideshow-container hodo">
                     <div class="mySlides fade">
-                        <img src="hodomockup/phone-mockup1.png" style="width:100%;">
+                        <img src="fdlmockup/phone-mockup1.png" style="width:100%;">
                     </div>
                     <div class="mySlides fade">
-                        <img src="hodomockup/phone-mockup2.png" style="width:100%">
+                        <img src="fdlmockup/phone-mockup2.png" style="width:100%">
                     </div>
                     <div class="mySlides fade">
-                        <img src="hodomockup/phone-mockup3.png" style="width:100%">
+                        <img src="fdlmockup/phone-mockup3.png" style="width:100%">
                     </div>
                     <div class="mySlides fade">
-                        <img src="hodomockup/phone-mockup4.png" style="width:100%">
-                    </div>
-                    <div class="mySlides fade">
-                        <img src="hodomockup/phone-mockup5.png" style="width:100%">
-                    </div>
-                    <div class="mySlides fade">
-                        <img src="hodomockup/phone-mockup6.png" style="width:100%">
+                        <img src="fdlmockup/phone-mockup4.png" style="width:100%">
                     </div>
                     <div style="text-align:center">
                         <span class="dot" onclick="currentSlide(0)"></span>
                         <span class="dot" onclick="currentSlide(1)"></span>
                         <span class="dot" onclick="currentSlide(2)"></span>
                         <span class="dot" onclick="currentSlide(3)"></span>
-                        <span class="dot" onclick="currentSlide(4)"></span>
-                        <span class="dot" onclick="currentSlide(5)"></span>
                     </div>
                 </div>
             </div>     
