--- a/hodo.html
+++ b/hodo.html
@@ -47,7 +47,7 @@
         </div>
         <div class="lighter flexj">
             <div class="categ">
-                <img src="icons/hodo.png" alt="StudyForge" title="StudyForge">
+                <img src="icons/hodo.png" alt="HWA" title="HWA">
                 <div class="txt">
                     HODO'S WORLD ADVENTURE
                 </div>
