--- a/letsgrow.html
+++ b/letsgrow.html
@@ -47,7 +47,7 @@
         </div>
         <div class="lighter flexj">
             <div class="categ">
-                <img src="icons/lg.png" alt="StudyForge" title="StudyForge">
+                <img src="icons/lg.png" alt="LetsGrow" title="LetsGrow">
                 <div class="txt">
                     LETSGROW
                 </div>
