--- a/lgcharts.html
+++ b/lgcharts.html
@@ -47,21 +47,19 @@
         </div>
         <div class="lighter flexj">
             <div class="categ">
-                <img src="icons/hodo.png" alt="StudyForge" title="StudyForge">
+                <img src="icons/lgc.png" alt="LetsGrow" title="LetsGrow">
                 <div class="txt">
                     LETSGROW CHARTS
                 </div>
             </div>
             <div class="categ">  
-                    <p class="des">Tools Used: </p>   
-                    <img src="icons/unity.png" alt="Unity" title="Unity">                   
+                    <p class="des">Tools Used: </p>                   
                     <img src="icons/vscode.png" alt="VSCode" title="VSCode">
-                    <img src="icons/canva.png" alt="Canva" title="Canva">
-                    <img src="icons/google.png" alt="Google" title="Google">
+                    <img src="icons/firebase.png" alt="Firebase" title="Firebase">
             </div>  
             <div class="categ">
                 <p class="des" style="text-align: center;">
-                    Hodo's World Adventure is an engaging and dynamic trivia-based board game created using Unity 2D. In this vibrant world, players embark on a thrilling journey with Hodo, rolling dice to navigate a colorful game board filled with surprises at every turn. As they move along the board, players encounter various tiles that can challenge their knowledge or alter their fate.
+                    LetsGrow Charts is a specialized web application designed to visualize the real-time growth factors of Batavian lettuce and freshwater tilapias in an aquaponic setup created on a location at Nasugbu, Batangas. The app provides detailed line graphs displaying sensor readings from a specific day, allowing users to monitor key environmental factors such as temperature, humidity, pH levels, luminosity, and soil moisture levels.
                     <br>
                     <br>
                     Language Used:
@@ -76,30 +74,14 @@
             <div class="categ">
                 <div class="slideshow-container hodo">
                     <div class="mySlides fade">
-                        <img src="hodomockup/phone-mockup1.png" style="width:100%;">
+                        <img src="lgcmockup/phone-mockup1.png" style="width:100%;">
                     </div>
                     <div class="mySlides fade">
-                        <img src="hodomockup/phone-mockup2.png" style="width:100%">
-                    </div>
-                    <div class="mySlides fade">
-                        <img src="hodomockup/phone-mockup3.png" style="width:100%">
-                    </div>
-                    <div class="mySlides fade">
-                        <img src="hodomockup/phone-mockup4.png" style="width:100%">
-                    </div>
-                    <div class="mySlides fade">
-                        <img src="hodomockup/phone-mockup5.png" style="width:100%">
-                    </div>
-                    <div class="mySlides fade">
-                        <img src="hodomockup/phone-mockup6.png" style="width:100%">
+                        <img src="lgcmockup/phone-mockup2.png" style="width:100%">
                     </div>
                     <div style="text-align:center">
                         <span class="dot" onclick="currentSlide(0)"></span>
                         <span class="dot" onclick="currentSlide(1)"></span>
-                        <span class="dot" onclick="currentSlide(2)"></span>
-                        <span class="dot" onclick="currentSlide(3)"></span>
-                        <span class="dot" onclick="currentSlide(4)"></span>
-                        <span class="dot" onclick="currentSlide(5)"></span>
                     </div>
                 </div>
             </div>     
