--- a/aboutpaws.html
+++ b/aboutpaws.html
@@ -47,7 +47,7 @@
         </div>
         <div class="lighter flexj">
             <div class="categ">
-                <img src="icons/ap.png" alt="StudyForge" title="StudyForge">
+                <img src="icons/ap.png" alt="AboutPaws" title="AboutPaws">
                 <div class="txt">ABOUTPAWS
                 </div>
             </div>
